<resources>
    <string name="app_name">Time</string>

    <string name="diary_edit_text">日记内容</string>

    <string name="diary_image">日记插图</string>

    <string name="image_instructions">图片说明</string>

    <string name="image_delete">删除图片</string>

    <string name="image_select">选择图片</string>

    <string name="select_some">0/9</string>

    <string name="all_image">全部图片</string>

    <string name="determine">确定</string>

    <string name="folders">文件夹</string>

    <string name="image_preview">预览</string>

    <string name="back">返回</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
