<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AlbumActivity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >





    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/album_toolbar"
        android:fitsSystemWindows="true"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_preview"
                android:layout_gravity="center"
                android:id="@+id/image_preview"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/diary_text_size"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_gravity="end"
                android:text="@string/select_some"
                android:id="@+id/select_some"
                />

        </FrameLayout>


    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/image_select_list"
        >


    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:layout_gravity="bottom"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:id="@+id/select_folder_layout"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/all_image"
                android:gravity="center"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginStart="@dimen/default_margin"
                android:id="@+id/select_folder"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                />

            <ImageView
                android:layout_width="@dimen/tri_width"
                android:layout_height="@dimen/tri_height"
                android:src="@drawable/triangle"
                android:layout_marginStart="@dimen/half_margin"
                android:contentDescription="@string/all_image"
                />


        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/determine"
            android:background="@color/colorPink"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/default_margin"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="@dimen/default_margin"
            android:id="@+id/determine"
            />

    </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_layout"
        >


    </FrameLayout>


</FrameLayout>